--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,17 @@
 
+html{
+    padding: 0;
+    margin: 0;
+}
+:root{
+    --bluemenu: #222c2b; 
+    --graybg: #3e3e3e; 
+    --bluemenu: #222c2b;
+    --textcolor: #ffffff; 
+    --maintitle: 400 4rem/normal Playfair Display; 
+    --text: 400 1.5rem/normal Fira Sans; 
+    --subtitle: 400 2.5rem/normal Playfair Display; 
+    --formtext: 400 1.25rem/normal Playfair Display; 
+    --strongtext: 500 1.5rem/normal Fira Sans; 
+    --basictitle: 400 2.25rem/normal Playfair Display; 
+}
