the menu was finalized although there is a df

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html{
 }
 :root{
     --bluemenu: #222c2b; 
+    --hovernav: #8FC1B5;
     --graybg: #3e3e3e; 
     --bluemenu: #222c2b;
     --textcolor: #ffffff; 
