--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -26,6 +26,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        z-index: 10;
         background-color: var(--bluemenu);
     }
     .nav_dinamicMenu{
@@ -41,7 +42,7 @@
     .--close{
         animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     }
-    @keyframes --close {
+    @keyframes slide-out-top {
         0% {
           transform: translateY(0);
           opacity: 1;
@@ -52,7 +53,17 @@
         }
       }
     .--open{
-        
+        animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
+    @keyframes slide-in-top {
+        0% {
+          transform: translateY(-1000px);
+          opacity: 0;
+        }
+        100% {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
 
 }
