--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -14,10 +14,11 @@
     .navContainer{
         width: 100%;
         height: 100%;
-        position: fixed;
+        position: sticky;
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        z-index: 20;
     }
     .nav_header{
         width: 100%;
