--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -14,7 +14,9 @@
     .navContainer{
         width: 100%;
         height: 100%;
-        position: sticky;
+        position: fixed;
+        top: 0;
+        left: 0;
         display: flex;
         flex-direction: column;
         overflow: hidden;
