--- a/src/Components/main-nav/Css/nav-actionIcon.css
+++ b/src/Components/main-nav/Css/nav-actionIcon.css
@@ -34,5 +34,41 @@
           transform: rotate(0);
         }
       }
+      .--down{
+        animation: rotate-0-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      }
+      @keyframes rotate-0-cw {
+        0% {
+          transform: rotate(180deg);
+        }
+        100% {
+          transform: rotate(0);
+        }
+      }
+/*BG Animacion Button*/
+     .--checked{
+      animation: bg-color 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      }
+      @keyframes bg-color {
+        0% {
+          background-color: rgba(255, 255, 255, 0);
+        }
+        100% {
+          background-color: rgba(255, 255, 255, 0.301);
+          
+        }
+      }
+      .--unchecked{
+        animation: bg-color-out 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        }
+        @keyframes bg-color-out {
+          0% {
+            background-color: rgba(255, 255, 255, 0.301);
+          }
+          100% {
+            background-color: rgba(255, 255, 255, 0);
+            
+          }
+        }
 }
 
