--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -5,7 +5,22 @@
         position: fixed;
         display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        column-gap: 2rem;
         background-color: var(--bluemenu);
+    }
+    .nav_header{
+        width: 50%;
+        padding: 0rem 3rem 0rem 3rem;
+    }
+    .nav_dinamicMenu{
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        column-gap: 2rem;
     }
     
 }
