Advance on Hero component and add little css

--- a/src/Components/main-nav/Css/nav-actionIcon.css
+++ b/src/Components/main-nav/Css/nav-actionIcon.css
@@ -1,3 +1,10 @@
+/*desktop*/
+@media (min-width: 769px){
+  .nav_icon{
+    display: none;
+  }
+}
+
 /*Mobile*/
 @media (max-width: 768px){
     .nav_icon{
