--- a/src/Components/Pages/home/css/home.css
+++ b/src/Components/Pages/home/css/home.css
@@ -1,3 +1,11 @@
+/*Desktop*/
+@media (min-width: 769px){
+    .home{
+        width: 100vw;
+        height: 100vh;
+        
+    }
+}
 /*Mobile*/
 @media (max-width: 768px){
     .home{
