--- a/src/Components/hero/css/heroContainer.css
+++ b/src/Components/hero/css/heroContainer.css
@@ -1,4 +1,15 @@
-
+/*Desktop*/
+@media (min-width: 769px){
+    .heroContainer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .hero_h1{
+        font: var(--maintitle)
+    }
+}
 
 
 /*Mobile*/
