--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -8,7 +8,7 @@
         align-items: center;
         justify-content: space-between;
         column-gap: 2rem;
-        background-color: var(--bluemenu);
+        background-color: var(--bluemenualfa);
     }
     .nav_header{
         width: 50%;
