--- a/src/Components/Pages/home/css/home.css
+++ b/src/Components/Pages/home/css/home.css
@@ -1,16 +1,16 @@
 /*Desktop*/
 @media (min-width: 769px){
     .home{
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: auto;
         
     }
 }
 /*Mobile*/
 @media (max-width: 768px){
     .home{
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: auto;
         
     }
 }
