--- a/src/Components/hero/css/heroContainer.css
+++ b/src/Components/hero/css/heroContainer.css
@@ -1,6 +1,8 @@
 /*Desktop*/
 @media (min-width: 769px){
     .heroContainer{
+        width: 100%;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -9,12 +11,21 @@
     .hero_h1{
         font: var(--maintitle)
     }
+    .hero-btnContainer{
+        display: flex;
+        align-items: row;
+        column-gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 
 /*Mobile*/
 @media (max-width: 768px){
     .heroContainer{
+        width: 100%;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -23,6 +34,13 @@
     .hero_h1{
         font: var(--maintitlemobile);
     }
+    .hero-btnContainer{
+        display: flex;
+        align-items: row;
+        column-gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }   
 }
 /*General*/
 .hero_h1{
@@ -36,7 +54,7 @@
 
         /* Full height */
         width: 100%;
-        height: 100%;
+        
         
         /* Create the parallax scrolling effect */
         background-attachment: fixed;
