--- a/src/Components/hero/css/heroContainer.css
+++ b/src/Components/hero/css/heroContainer.css
@@ -47,7 +47,7 @@
     color: var(--textcolor);
     text-align: center;
 }
-    /*modificadores generales*/
+    /*general mod's*/
     .--paralax{
         /* The image used */
         background-image: url('https://i.imgur.com/AmRYv3W.png');
