Code refactoring for best practices

--- a/src/Components/cta/css/cta-container.css
+++ b/src/Components/cta/css/cta-container.css
@@ -65,7 +65,7 @@
  /*modificadores generales*/
  .--ctaParalax{
     /* The image used */
-    background-image: url('https://i.imgur.com/B6VGN4J.png');
+    background-image: url('https://i.imgur.com/8ItMmae.png');
 
     /* Full height */
     width: 100%;
