--- a/src/Components/hero/css/heroContainer.css
+++ b/src/Components/hero/css/heroContainer.css
@@ -9,6 +9,7 @@
         flex-direction: column;
     }
     .hero_h1{
+        padding: 2rem;
         font: var(--maintitle)
     }
     .hero-btnContainer{
