I have created the case cards section

--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -8,6 +8,7 @@
         align-items: center;
         justify-content: space-between;
         column-gap: 2rem;
+        z-index: 20;
         background-color: var(--bluemenualfa);
     }
     .nav_header{
