--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ html{
     padding: 0;
     margin: 0;
 }
+.App{
+    width: 100%;
+}
 :root{
     --bluemenu: #222c2b;
     --bluemenualfa: #222c2b81;
