Fix error for netlify

--- a/src/Components/footer/css/footerContainer.css
+++ b/src/Components/footer/css/footerContainer.css
@@ -18,7 +18,7 @@
     width: 70%;
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 .footer_quote{
