--- a/src/Components/hero/css/heroContainer.css
+++ b/src/Components/hero/css/heroContainer.css
@@ -51,7 +51,7 @@
     /*general mod's*/
     .--paralax{
         /* The image used */
-        background-image: url('https://i.imgur.com/AmRYv3W.png');
+        background-image: url('https://i.imgur.com/Q4ixtSc.png');
 
         /* Full height */
         width: 100%;
