--- a/src/Components/main-nav/Css/nav-container.css
+++ b/src/Components/main-nav/Css/nav-container.css
@@ -30,7 +30,6 @@
 @media (max-width: 768px){
     .navContainer{
         width: 100%;
-        height: 100%;
         position: fixed;
         top: 0;
         left: 0;
@@ -41,7 +40,7 @@
     }
     .nav_header{
         width: 100%;
-        height: 20%;
+        height: 20vh;
         display: flex;
         flex-direction: row;
         column-gap: 3rem;
@@ -51,7 +50,6 @@
     }
     .nav_dinamicMenu{
         width: 100%;
-        height: 80%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -66,11 +64,13 @@
     @keyframes slide-out-top {
         0% {
           transform: translateY(0);
+          height: 80vh;
           opacity: 1;
         }
         100% {
           transform: translateY(-1000px);
           opacity: 0;
+          height: 0vh;
         }
       }
     .--open{
@@ -80,10 +80,12 @@
         0% {
           transform: translateY(-1000px);
           opacity: 0;
+          height: 0vh;
         }
         100% {
           transform: translateY(0);
           opacity: 1;
+          height: 80vh;
         }
       }
 
